| Summary: | ASTERISK-20114: Motif doesn't respect codec order preference | ||
| Reporter: | Malcolm Davenport (mdavenport) | Labels: | |
| Date Opened: | 2012-07-10 08:42:05 | Date Closed: | 2012-07-10 09:09:20 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 11 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Motif doesn't respect codec order preference | ||
| Comments: | |||